Create request for book , movie , change html Realts #6

--- a/index.html
+++ b/index.html
@@ -15,31 +15,42 @@
   </head>
   <body>
     <div class="search">
-      <input type="text" placeholder="Search..." />
+      <input type="text" placeholder="Search..." class="search-word" />
+      <button id="search">Search</button>
     </div>
     <h3 class="main-font">Books</h3>
     <div class="books">
       <div class="book-card">
         <div class="book-img">
-          <img src="./product-02.jpg" alt="book image" />
+          <img src="" alt="book image" class="book-img-container"/>
         </div>
         <div class="book-desc">
-          <p>Name</p>
-          <p>Author</p>
-          <a href="#">Click To Read</a>
+          <p class="book-name">Name</p>
+          <p class="book-author">Author</p>
+          <a href="" class="book-link-to-read" >Click To Read</a>
+        </div>
+      </div>
+      <div class="book-card">
+        <div class="book-img">
+          <img src="" alt="book image" class="book-img-container1"/>
+        </div>
+        <div class="book-desc">
+          <p class="book-name1">Name</p>
+          <p class="book-author1">Author</p>
+          <a href="" class="book-link-to-read1 " >Click To Read</a>
         </div>
       </div>
     </div>
     <h3 class="main-font">Movies</h3>
     <div class="movies">
-      <div class="movie-card">
-        <img src="./product-02.jpg" alt="Movie Image" />
+      <!-- <div class="movie-card">
+        <img src="" alt="Movie Image" class="movie-img" />
         <div class="movie-desc">
-          <p>Movie name</p>
-          <p>Vote Average</p>
-          <p>Language</p>
+          <p class="movie-name">Movie name</p>
+          <p class="movie-average">Vote Average</p>
+          <p class="movie-date">Date</p>
         </div>
-      </div>
+      </div> -->
     </div>
     <script src="main/main.js"></script>
   </body>
