abstraction the functions Relats #5 #8

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <h3 class="main-font">Books</h3>
     <div class="books">
-      <div class="book-card">
+      <!-- <div class="book-card">
         <div class="book-img">
           <img src="" alt="book image" class="book-img-container"/>
         </div>
@@ -29,17 +29,7 @@
           <p class="book-author">Author</p>
           <a href="" class="book-link-to-read" >Click To Read</a>
         </div>
-      </div>
-      <div class="book-card">
-        <div class="book-img">
-          <img src="" alt="book image" class="book-img-container1"/>
-        </div>
-        <div class="book-desc">
-          <p class="book-name1">Name</p>
-          <p class="book-author1">Author</p>
-          <a href="" class="book-link-to-read1 " >Click To Read</a>
-        </div>
-      </div>
+      </div> -->
     </div>
     <h3 class="main-font">Movies</h3>
     <div class="movies">
