handle Errors Relates #8

--- a/index.html
+++ b/index.html
@@ -19,29 +19,9 @@
       <button id="search">Search</button>
     </div>
     <h3 class="main-font">Books</h3>
-    <div class="books">
-      <!-- <div class="book-card">
-        <div class="book-img">
-          <img src="" alt="book image" class="book-img-container"/>
-        </div>
-        <div class="book-desc">
-          <p class="book-name">Name</p>
-          <p class="book-author">Author</p>
-          <a href="" class="book-link-to-read" >Click To Read</a>
-        </div>
-      </div> -->
-    </div>
+    <div class="books"></div>
     <h3 class="main-font">Movies</h3>
-    <div class="movies">
-      <!-- <div class="movie-card">
-        <img src="" alt="Movie Image" class="movie-img" />
-        <div class="movie-desc">
-          <p class="movie-name">Movie name</p>
-          <p class="movie-average">Vote Average</p>
-          <p class="movie-date">Date</p>
-        </div>
-      </div> -->
-    </div>
+    <div class="movies"></div>
     <script src="main/main.js"></script>
   </body>
 </html>
