--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <title>Have Fun</title>
   </head>
   <body>
+    <div class="header-page">
+      <h1>Welcome To Our Website</h1>
+    <p>
+      You can search for Books and Movies at the same time don't forget to
+      <strong>HAVE FUN</strong>
+    </p>
+  </div>
+    
     <div class="search">
       <input type="text" placeholder="Search..." class="search-word" />
       <button id="search">Search</button>
